--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry kind="src" path="2021/02"/>
 	<classpathentry kind="src" path="2021/03"/>
 	<classpathentry kind="src" path="2021/04"/>
+	<classpathentry kind="src" path="2021/05"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
