add 2021 06 java solution

--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,6 @@
 	<classpathentry kind="src" path="2021/03"/>
 	<classpathentry kind="src" path="2021/04"/>
 	<classpathentry kind="src" path="2021/05"/>
+	<classpathentry kind="src" path="2021/06"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
