--- a/.classpath
+++ b/.classpath
@@ -36,5 +36,6 @@
 	<classpathentry kind="src" path="2021/05"/>
 	<classpathentry kind="src" path="2021/06"/>
 	<classpathentry kind="src" path="2021/07"/>
+	<classpathentry kind="src" path="2021/08"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
