--- a/.classpath
+++ b/.classpath
@@ -38,5 +38,6 @@
 	<classpathentry kind="src" path="2021/07"/>
 	<classpathentry kind="src" path="2021/08"/>
 	<classpathentry kind="src" path="2021/09"/>
+	<classpathentry kind="src" path="2021/10"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
