add 2021 12 java solution

--- a/.classpath
+++ b/.classpath
@@ -40,5 +40,6 @@
 	<classpathentry kind="src" path="2021/09"/>
 	<classpathentry kind="src" path="2021/10"/>
 	<classpathentry kind="src" path="2021/11"/>
+	<classpathentry kind="src" path="2021/12"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
