--- a/.classpath
+++ b/.classpath
@@ -43,5 +43,6 @@
 	<classpathentry kind="src" path="2021/12"/>
 	<classpathentry kind="src" path="2021/13"/>
 	<classpathentry kind="src" path="2021/16"/>
+	<classpathentry kind="src" path="2021/17"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
