add 2021 20 java solution

--- a/.classpath
+++ b/.classpath
@@ -44,5 +44,6 @@
 	<classpathentry kind="src" path="2021/13"/>
 	<classpathentry kind="src" path="2021/16"/>
 	<classpathentry kind="src" path="2021/17"/>
+	<classpathentry kind="src" path="2021/20"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
