add 2021 21 part one java solution

--- a/.classpath
+++ b/.classpath
@@ -45,5 +45,6 @@
 	<classpathentry kind="src" path="2021/16"/>
 	<classpathentry kind="src" path="2021/17"/>
 	<classpathentry kind="src" path="2021/20"/>
+	<classpathentry kind="src" path="2021/21"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
