--- a/.classpath
+++ b/.classpath
@@ -46,5 +46,6 @@
 	<classpathentry kind="src" path="2021/17"/>
 	<classpathentry kind="src" path="2021/20"/>
 	<classpathentry kind="src" path="2021/21"/>
+	<classpathentry kind="src" path="2021/22"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
