--- a/.classpath
+++ b/.classpath
@@ -47,5 +47,6 @@
 	<classpathentry kind="src" path="2021/20"/>
 	<classpathentry kind="src" path="2021/21"/>
 	<classpathentry kind="src" path="2021/22"/>
+	<classpathentry kind="src" path="2021/25"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
